--- a/tests/unit/sccdag_attributes/src/CMakeLists.txt
+++ b/tests/unit/sccdag_attributes/src/CMakeLists.txt
@@ -26,7 +26,7 @@ set(PassesPath ${RootPath}/src)
 set(UtilDep ${PassesPath}/basic_utilities/include)
 set(DGDep ${PassesPath}/alloc_aa/include ${PassesPath}/pdg/include ${PassesPath}/talkdown/include)
 set(SVFDep ${RootPath}/external/svf/include)
-set(LoopDep ${PassesPath}/loops/include ${PassesPath}/loop_structure/include ${PassesPath}/loop_metadata/include)
+set(LoopDep ${PassesPath}/loops/include ${PassesPath}/loop_structure/include)
 include_directories(${LLVM_INCLUDE_DIRS} ${UtilDep} ${DGDep} ${SVFDep} ${LoopDep} ../../helpers/include ../include ./)
 
 # Declare the LLVM pass to compile
