Move LoopCarriedDependencies from loop_structure to loops

--- a/src/loops/src/CMakeLists.txt
+++ b/src/loops/src/CMakeLists.txt
@@ -2,6 +2,7 @@
 set(Srcs 
   AccumulatorOpInfo.cpp
   InductionVariables.cpp
+  LoopCarriedDependencies.cpp
   LoopGoverningIVAttribution.cpp
   IVStepperUtility.cpp
   SCCAttrs.cpp
