Added the skeleton for the whilifier

--- a/src/loop_whilifier/src/CMakeLists.txt
+++ b/src/loop_whilifier/src/CMakeLists.txt
@@ -1,15 +1,13 @@
 # Sources
 set(Srcs 
-  Pass.cpp
-  Enablers.cpp
-  EnablersManager.cpp
+  LoopWhilify.cpp
 )
 
 # Compilation flags
-set_source_files_properties(${Srcs} PROPERTIES COMPILE_FLAGS " -std=c++14 -fPIC")
+set_source_files_properties(${Srcs} PROPERTIES COMPILE_FLAGS " -std=c++17 -fPIC")
 
 # Name of the LLVM pass
-set(PassName "Enablers")
+set(PassName "LoopDistribution")
 
 # configure LLVM 
 find_package(LLVM REQUIRED CONFIG)
@@ -29,21 +27,13 @@ include_directories(${LLVM_INCLUDE_DIRS}
   ../../transformations/include
   ../../alloc_aa/include 
   ../../pdg/include 
-  ../../threadpool/include 
   ../../loop_structure/include
   ../../loops/include 
-  ../../heuristics/include 
-  ../../parallelization_technique/include 
-  ../../dswp/include 
-  ../../doall/include 
-  ../../helix/include 
-  ../../hotprofiler/include
-  ../../loop_distribution/include
-  ../../loop_unroll/include
-  ../../loop_whilifier/include
+  ../../hotprofiler/include 
   ../../talkdown/include
   ../../noelle/include
-  ./
+  ../include/ 
+  ./ 
   )
 
 # Declare the LLVM pass to compile
