--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 UTILS=transformations basic_utilities task loops architecture loop_metadata clean_metadata pdg_stats
 ANALYSIS=pdg talkdown alloc_aa dataflow loop_structure
 PARALLELIZATION=parallelizer heuristics parallelization_technique dswp doall helix
-ENABLERS=enablers loop_distribution loop_unroll inliner
+ENABLERS=enablers loop_distribution loop_unroll inliner loop_whilifier
 ALL=$(UTILS) $(ANALYSIS) $(ENABLERS) $(PARALLELIZATION) hotprofiler unique_ir_marker noelle scripts
 
 all: $(ALL)
@@ -70,6 +70,9 @@ doall:
 	cd $@ ; ../scripts/run_me.sh
 
 helix:
+	cd $@ ; ../scripts/run_me.sh
+
+loop_whilifier:
 	cd $@ ; ../scripts/run_me.sh
 
 loop_distribution:
