Noelle: added the data flow API

--- a/src/dswp/src/CMakeLists.txt
+++ b/src/dswp/src/CMakeLists.txt
@@ -44,6 +44,7 @@ include_directories(${LLVM_INCLUDE_DIRS}
   ../../hotprofiler/include 
   ../../talkdown/include
   ../../noelle/include
+  ../../dataflow/include
   ../include 
   ./ 
   )
