--- a/src/heuristics/src/CMakeLists.txt
+++ b/src/heuristics/src/CMakeLists.txt
@@ -38,6 +38,7 @@ include_directories(${LLVM_INCLUDE_DIRS}
   ../../talkdown/include
   ../../hotprofiler/include
   ../../noelle/include
+  ../../dataflow/include
   )
 
 # Declare the LLVM pass to compile
