--- a/src/doall/src/CMakeLists.txt
+++ b/src/doall/src/CMakeLists.txt
@@ -38,6 +38,7 @@ include_directories(${LLVM_INCLUDE_DIRS}
   ../../hotprofiler/include 
   ../../talkdown/include
   ../../noelle/include
+  ../../dataflow/include
   ../include 
   ./ 
   )
