Dataflow: bug fixed. DataFlowEngine.hpp wasn't installed

--- a/src/dataflow/CMakeLists.txt
+++ b/src/dataflow/CMakeLists.txt
@@ -32,4 +32,9 @@ include(AddLLVM)
 add_subdirectory(src)
 
 # Install
-install(PROGRAMS include/DataFlow.hpp include/DataFlowAnalysis.hpp include/DataFlowResult.hpp DESTINATION include)
+install(PROGRAMS 
+  include/DataFlow.hpp 
+  include/DataFlowAnalysis.hpp 
+  include/DataFlowEngine.hpp 
+  include/DataFlowResult.hpp 
+  DESTINATION include)
