Exported parallelism classes

--- a/src/doall/CMakeLists.txt
+++ b/src/doall/CMakeLists.txt
@@ -32,4 +32,7 @@ include(AddLLVM)
 add_subdirectory(src)
 
 # Install
-install(PROGRAMS include/DOALL.hpp DESTINATION include)
+install(PROGRAMS 
+  include/DOALL.hpp 
+  include/DOALLTask.hpp
+  DESTINATION include)
