SCCDAGAttrs: use Variable abstraction to determine reducibility

--- a/src/loops/CMakeLists.txt
+++ b/src/loops/CMakeLists.txt
@@ -30,6 +30,7 @@ add_subdirectory(src)
 
 # Install
 install(PROGRAMS 
+    include/Variable.hpp
     include/LoopDependenceInfo.hpp
     include/InductionVariables.hpp
     include/LoopCarriedDependencies.hpp
