--- a/tests/unit/sccdag_attributes/src/CMakeLists.txt
+++ b/tests/unit/sccdag_attributes/src/CMakeLists.txt
@@ -23,11 +23,8 @@ message(STATUS "LLVM_DIR IS ${LLVM_CMAKE_DIR}.")
 
 set(RootPath ../../../..)
 set(PassesPath ${RootPath}/src)
-set(UtilDep ${PassesPath}/basic_utilities/include)
-set(DGDep ${PassesPath}/alloc_aa/include ${PassesPath}/pdg/include ${PassesPath}/talkdown/include)
 set(SVFDep ${RootPath}/external/svf/include)
-set(LoopDep ${PassesPath}/loops/include ${PassesPath}/loop_structure/include)
-include_directories(${LLVM_INCLUDE_DIRS} ${UtilDep} ${DGDep} ${SVFDep} ${LoopDep} ../../helpers/include ../include ./)
+include_directories(${LLVM_INCLUDE_DIRS} ${RootPath}/install/include ${SVFDep} ../../helpers/include ../include ./)
 
 # Declare the LLVM pass to compile
 add_llvm_library(${PassName} MODULE ${Srcs})
