Noelle: added a new API to fetch the dominators

--- a/src/Makefile
+++ b/src/Makefile
@@ -97,7 +97,7 @@ clean:
 	rm -rf */build */*.json ; 
 	find ./ -name .ycm_extra_conf.py -delete ;
 	find ./ -name compile_commands.json -delete ;
-	rm -rf */*/.clangd ;
+	find ./ -name .clangd -exec rm -rv {} +
 
 .PHONY: $(ALL)
 
