LoopInvariantCodeMotion: memory hoist/promote progress

--- a/src/loop_invariant_code_motion/src/CMakeLists.txt
+++ b/src/loop_invariant_code_motion/src/CMakeLists.txt
@@ -4,6 +4,7 @@ set(Srcs
   LoopInvariantCodeMotion.cpp
   LoopInvariantHoister.cpp
   LastLiveOutStoreHoister.cpp
+  LastLiveOutPeeler.cpp
 )
 
 # Compilation flags
