--- a/tests/unit/loop_invariant_code_motion/CMakeLists.txt
+++ b/tests/unit/loop_invariant_code_motion/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Project
 cmake_minimum_required(VERSION 3.4.3)
-project(LoopInvariantCodeMotion)
+project(Parallelization)
 
 # Programming languages to use
 enable_language(C CXX)
@@ -14,7 +14,12 @@ add_definitions(
 -D__STDC_CONSTANT_MACROS
 )
 
+SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+SET(CUSTOM_COMPILE_FLAGS "-fexceptions")
+SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${CUSTOM_COMPILE_FLAGS}" )
+SET( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${CUSTOM_COMPILE_FLAGS}" )
 set( CMAKE_EXPORT_COMPILE_COMMANDS ON )
+
 include_directories(${LLVM_INCLUDE_DIRS})
 link_directories(${LLVM_LIBRARY_DIRS})
 message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
@@ -28,9 +33,4 @@ include(AddLLVM)
 add_subdirectory(src)
 
 # Install
-install(PROGRAMS
-         include/Mem2RegNonAlloca.hpp
-         include/LastLiveOutPeeler.hpp
-         include/LoopInvariantCodeMotion.hpp
-         DESTINATION include)
-
+install(PROGRAMS include/LICMTestSuite.hpp DESTINATION include)
