Add BitMatrix data structure in utilities

--- a/src/basic_utilities/src/CMakeLists.txt
+++ b/src/basic_utilities/src/CMakeLists.txt
@@ -4,6 +4,7 @@ set(Srcs
   ScalarEvolutionExpander.cpp
   ScalarEvolutionReferencer.cpp
   ScalarEvolutionReferenceTreeExpander.cpp
+  BitMatrix.cpp
 )
 
 # Compilation flags
