Tests: added more combinations

--- a/tests/condor/Makefile
+++ b/tests/condor/Makefile
@@ -80,6 +80,31 @@ regression_13:
 	python2 scripts/generateCondorScript.py scripts/$(CONDOR_FILE) ./$@.con "$@" "-noelle-pdg-check -noelle-verbose=3 -noelle-inliner-avoid-hoist-to-main -noelle-disable-helix" " " ${EMAIL};
 	./scripts/appendTests.sh $@.con ;
 
+regression_14:
+	cd ../ ; cp -r regression $@ ;
+	python2 scripts/generateCondorScript.py scripts/$(CONDOR_FILE) ./$@.con "$@" "-noelle-pdg-check -noelle-verbose=3 -noelle-disable-loop-invariant-code-motion -noelle-disable-helix -noelle-disable-dswp -noelle-disable-doall" " " ${EMAIL};
+	./scripts/appendTests.sh $@.con ;
+
+regression_15:
+	cd ../ ; cp -r regression $@ ;
+	python2 scripts/generateCondorScript.py scripts/$(CONDOR_FILE) ./$@.con "$@" "-noelle-pdg-check -noelle-verbose=3 -noelle-disable-loop-invariant-code-motion -noelle-disable-dswp -noelle-disable-doall" " " ${EMAIL};
+	./scripts/appendTests.sh $@.con ;
+
+regression_16:
+	cd ../ ; cp -r regression $@ ;
+	python2 scripts/generateCondorScript.py scripts/$(CONDOR_FILE) ./$@.con "$@" "-noelle-pdg-check -noelle-verbose=3 -noelle-disable-loop-invariant-code-motion -noelle-disable-helix -noelle-disable-doall" " " ${EMAIL};
+	./scripts/appendTests.sh $@.con ;
+
+regression_17:
+	cd ../ ; cp -r regression $@ ;
+	python2 scripts/generateCondorScript.py scripts/$(CONDOR_FILE) ./$@.con "$@" "-noelle-pdg-check -noelle-verbose=3 -noelle-disable-loop-invariant-code-motion -noelle-disable-helix" " " ${EMAIL};
+	./scripts/appendTests.sh $@.con ;
+
+regression_18:
+	cd ../ ; cp -r regression $@ ;
+	python2 scripts/generateCondorScript.py scripts/$(CONDOR_FILE) ./$@.con "$@" "-noelle-pdg-check -noelle-verbose=3 -noelle-disable-loop-invariant-code-motion -noelle-disable-dswp" " " ${EMAIL};
+	./scripts/appendTests.sh $@.con ;
+
 unit.con:
 	python2 scripts/generateCondorScript.py scripts/$@ ./$@ "$@" " " " " ${EMAIL};
 
