Code styling changes for the BitMatrix code

--- a/src/basic_utilities/CMakeLists.txt
+++ b/src/basic_utilities/CMakeLists.txt
@@ -35,7 +35,7 @@ install(  PROGRAMS
           include/Queue.hpp
           include/ScalarEvolutionExpander.h
           include/ScalarEvolutionReferencer.hpp
-          include/BitMatrix.h
+          include/BitMatrix.hpp
           DESTINATION 
           include
         )
