--- a/tests/scripts/Makefile
+++ b/tests/scripts/Makefile
@@ -68,9 +68,21 @@ baseline_with_metadata.bc: default.profraw baseline_pre.bc
 	noelle-meta-pdg-embed $@ -o $@
 	llvm-dis $@
 
-baseline_pre.bc: test.bc $(THREADER).bc
+baseline_with_runtime.bc: test.bc $(THREADER).bc
 	llvm-link $^ -o $@
+	llvm-dis $@
+
+baseline_with_runtime_prof: baseline_with_runtime.bc
+	noelle-prof-coverage $^ $@ $(LIBS)
+
+pre_profiles.profraw: baseline_with_runtime_prof input.txt
+	./$< `cat input.txt` 
+	mv default.profraw $@
+
+baseline_pre.bc: pre_profiles.profraw baseline_with_runtime.bc
+	noelle-meta-prof-embed $^ -o $@
 	noelle-pre $@ $(NOELLE_OPTIONS)
+	noelle-meta-clean $@ $@
 	llvm-dis $@
 
 default.profraw: baseline_pre_prof input.txt
