LoopIterationDomainSpaceAnalysis: simple de-linearization cases

--- a/src/loops/CMakeLists.txt
+++ b/src/loops/CMakeLists.txt
@@ -36,6 +36,7 @@ install(PROGRAMS
     include/Invariants.hpp
     include/LoopCarriedDependencies.hpp
     include/LoopGoverningIVAttribution.hpp
+    include/LoopIterationDomainSpaceAnalysis.hpp
     include/IVStepperUtility.hpp
     include/SCCDAGAttrs.hpp
     include/SCCDAGNormalizer.hpp
