ScalarEvolutionDelinearization: handle casts

--- a/src/basic_utilities/CMakeLists.txt
+++ b/src/basic_utilities/CMakeLists.txt
@@ -35,7 +35,8 @@ install(  PROGRAMS
           include/Queue.hpp
           include/ScalarEvolutionExpander.h
           include/ScalarEvolutionReferencer.hpp
-          include/BitMatrix.hpp
+          include/ScalarEvolutionDelinearization.hpp
+          include/BitMatrix.h
           DESTINATION 
           include
         )
