HELIX: Do not spill all induction variables
(still spilling loop governing IV)

--- a/src/helix/src/CMakeLists.txt
+++ b/src/helix/src/CMakeLists.txt
@@ -5,6 +5,7 @@ set(Srcs
   HELIXTaskInternalDependenceGraph.cpp
   Linker.cpp
   Spiller.cpp
+  InductionVariableStepper.cpp
   SequentialSegments.cpp
   SequentialSegment.cpp
   Scheduler.cpp
