Users: show how to use the new Hot API

--- a/users/tests/0/Makefile
+++ b/users/tests/0/Makefile
@@ -7,8 +7,7 @@ test.bc: test.c
 	llvm-dis $@
 
 test_pre.bc: test.bc
-	noelle-pre $^
-	cp $^ $@
+	noelle-norm $^ -o $@
 	llvm-dis $@
 
 test_pre_prof: test_pre.bc
