--- a/src/doall/src/CMakeLists.txt
+++ b/src/doall/src/CMakeLists.txt
@@ -39,6 +39,7 @@ include_directories(${LLVM_INCLUDE_DIRS}
   ../../talkdown/include
   ../../noelle/include
   ../../dataflow/include
+  ../../callgraph/include
   ../include 
   ./ 
   )
