--- a/src/enablers/src/CMakeLists.txt
+++ b/src/enablers/src/CMakeLists.txt
@@ -46,6 +46,7 @@ include_directories(${LLVM_INCLUDE_DIRS}
   ../../talkdown/include
   ../../noelle/include
   ../../dataflow/include
+  ../../callgraph/include
   ./
   )
 
