--- a/src/helix/src/CMakeLists.txt
+++ b/src/helix/src/CMakeLists.txt
@@ -49,6 +49,7 @@ include_directories(${LLVM_INCLUDE_DIRS}
   ../../hotprofiler/include 
   ../../talkdown/include
   ../../noelle/include
+  ../../callgraph/include
   ../include 
   ./ 
   )
