--- a/src/inliner/src/CMakeLists.txt
+++ b/src/inliner/src/CMakeLists.txt
@@ -40,6 +40,7 @@ include_directories(${LLVM_INCLUDE_DIRS}
   ../../doall/include
   ../../parallelization_technique/include 
   ../../heuristics/include 
+  ../../callgraph/include
   ../include 
   )
 
