--- a/src/parallelizer/src/CMakeLists.txt
+++ b/src/parallelizer/src/CMakeLists.txt
@@ -44,6 +44,7 @@ include_directories(${LLVM_INCLUDE_DIRS}
   ../../talkdown/include
   ../../noelle/include
   ../../dataflow/include
+  ../../callgraph/include
   ./
   )
 
