CallGraph: started the abstraction

--- a/src/parallelization_technique/src/CMakeLists.txt
+++ b/src/parallelization_technique/src/CMakeLists.txt
@@ -35,6 +35,9 @@ include_directories(${LLVM_INCLUDE_DIRS}
   ../../hotprofiler/include 
   ../../noelle/include
   ../../dataflow/include
+  ../../callgraph/include
+  ../../talkdown/include 
+  ../../../external/svf/include
   ../include 
   ./
   )
