--- a/src/loop_metadata/src/CMakeLists.txt
+++ b/src/loop_metadata/src/CMakeLists.txt
@@ -29,10 +29,14 @@ include_directories(
   ../../transformations/include
   ../../loops/include
   ../../pdg/include
+  ../../alloc_aa/include 
+  ../../callgraph/include
+  ../../talkdown/include
   ../../loop_structure/include
   ../../hotprofiler/include
   ../../noelle/include
   ../../dataflow/include
+  ../../../external/svf/include
   )
 
 # Declare the LLVM pass to compile
