--- a/src/loop_whilifier/src/CMakeLists.txt
+++ b/src/loop_whilifier/src/CMakeLists.txt
@@ -33,6 +33,7 @@ include_directories(${LLVM_INCLUDE_DIRS}
   ../../talkdown/include
   ../../noelle/include
   ../../dataflow/include
+  ../../callgraph/include
   ../include/ 
   ./ 
   )
