--- a/tests/unit/control_flow_equivalence/CMakeLists.txt
+++ b/tests/unit/control_flow_equivalence/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Project
 cmake_minimum_required(VERSION 3.4.3)
-project(ParallelizerTests)
+project(Parallelization)
 
 # Programming languages to use
 enable_language(C CXX)
