MemoryCloningAnalysis: introduce analysis

--- a/src/loops/CMakeLists.txt
+++ b/src/loops/CMakeLists.txt
@@ -30,6 +30,7 @@ add_subdirectory(src)
 
 # Install
 install(PROGRAMS 
+    include/MemoryCloningAnalysis.hpp
     include/Variable.hpp
     include/ControlFlowEquivalence.hpp
     include/LoopDependenceInfo.hpp
