Clone and compile SCAF

--- a/external/Makefile
+++ b/external/Makefile
@@ -1,9 +1,11 @@
 all: compile
 
-compile: svf patch.tar
+compile: svf patch.tar scaf
 	cd svf ; tar xf ../patch.tar ;
 	./scripts/patch.sh
 	cd svf ; ./build.sh ;
+	./scripts/scaf_patch_make.sh
+	cd scaf ; make ;
 
 svf:
 	git clone -b SVF-1.8 https://github.com/SVF-tools/SVF.git svf
@@ -11,11 +13,15 @@ svf:
 patch.tar: patch svf
 	cd $< ; tar cf $@ * ; mv $@ ../ ;
 
+scaf:
+	git clone https://github.com/sapostolakis/scaf.git scaf
+
 clean:
 	./scripts/clean.sh
 	rm -f patch.tar 
 
 uninstall:
 	rm -rf svf ;
+	rm -rf scaf ;
 
 .PHONY: compile clean uninstall
