--- a/tests/condor/Makefile
+++ b/tests/condor/Makefile
@@ -1,9 +1,9 @@
 EMAIL=
 CONDOR_FILE=regression.con
 
-all: regression
+all: performance.con regression
 
-regression: regression_enablers regression_default regression_1 regression_2 regression_3 regression_4 regression_5 regression_6 regression_7 regression_8 regression_9 regression_10 regression_11 regression_12 regression_13 regression_14 regression_15 regression_16 regression_17 regression_18 unit.con performance.con
+regression: regression_enablers regression_default regression_1 regression_2 regression_3 regression_4 regression_5 regression_6 regression_7 regression_8 regression_9 regression_10 regression_11 regression_12 regression_13 regression_14 regression_15 regression_16 regression_17 regression_18 unit.con
 
 regression_enablers:
 	cd ../ ; cp -r regression $@ ;
