Call graph: implemented the SCCCAG

--- a/src/callgraph/CMakeLists.txt
+++ b/src/callgraph/CMakeLists.txt
@@ -32,4 +32,5 @@ install(PROGRAMS
   include/CallGraph.hpp
   include/CallGraphNode.hpp
   include/CallGraphEdge.hpp
+  include/SCCCAG.hpp
   DESTINATION include)
