CMakeLists/Unit tests: forgot traits hpp file. Do not delete pdg anymore

--- a/src/callgraph/CMakeLists.txt
+++ b/src/callgraph/CMakeLists.txt
@@ -32,5 +32,6 @@ install(PROGRAMS
   include/CallGraph.hpp
   include/CallGraphNode.hpp
   include/CallGraphEdge.hpp
+  include/CallGraphTraits.hpp
   include/SCCCAG.hpp
   DESTINATION include)
