--- a/src/loops/src/CMakeLists.txt
+++ b/src/loops/src/CMakeLists.txt
@@ -6,6 +6,7 @@ set(Srcs
   InvariantManager.cpp
   InductionVariables.cpp
   InductionVariable.cpp
+  LoopAwareMemDepAnalysis.cpp
   LoopCarriedDependencies.cpp
   LoopGoverningIVAttribution.cpp
   LoopIterationDomainSpaceAnalysis.cpp
@@ -37,6 +38,7 @@ message(STATUS "LLVM_DIR IS ${LLVM_CMAKE_DIR}.")
 
 include_directories(${LLVM_INCLUDE_DIRS} 
   ../../../external/svf/include
+  ../../../external/scaf/include
   ../../basic_utilities/include 
   ../../transformations/include
   ../../architecture/include 
