Include scaf in all the CMakeLists

--- a/src/loop_metadata/src/CMakeLists.txt
+++ b/src/loop_metadata/src/CMakeLists.txt
@@ -37,6 +37,7 @@ include_directories(
   ../../noelle/include
   ../../dataflow/include
   ../../../external/svf/include
+  ../../../external/scaf/include
   )
 
 # Declare the LLVM pass to compile
