--- a/src/enablers/src/CMakeLists.txt
+++ b/src/enablers/src/CMakeLists.txt
@@ -25,6 +25,7 @@ message(STATUS "LLVM_DIR IS ${LLVM_CMAKE_DIR}.")
 
 include_directories(${LLVM_INCLUDE_DIRS} 
   ../../../external/svf/include
+  ../../../external/scaf/include
   ../../basic_utilities/include 
   ../../transformations/include
   ../../alloc_aa/include 
