--- a/src/parallelization_technique/src/CMakeLists.txt
+++ b/src/parallelization_technique/src/CMakeLists.txt
@@ -38,6 +38,7 @@ include_directories(${LLVM_INCLUDE_DIRS}
   ../../callgraph/include
   ../../talkdown/include 
   ../../../external/svf/include
+  ../../../external/scaf/include
   ../include 
   ./
   )
