--- a/src/parallelizer/src/CMakeLists.txt
+++ b/src/parallelizer/src/CMakeLists.txt
@@ -24,9 +24,10 @@ include(AddLLVM)
 
 message(STATUS "LLVM_DIR IS ${LLVM_CMAKE_DIR}.")
 
-include_directories(${LLVM_INCLUDE_DIRS} 
+include_directories(${LLVM_INCLUDE_DIRS}
   ../../../external/svf/include
-  ../../basic_utilities/include 
+  ../../../external/scaf/include
+  ../../basic_utilities/include
   ../../transformations/include
   ../../task/include 
   ../../alloc_aa/include 
