--- a/src/dswp/src/CMakeLists.txt
+++ b/src/dswp/src/CMakeLists.txt
@@ -46,6 +46,7 @@ include_directories(${LLVM_INCLUDE_DIRS}
   ../../noelle/include
   ../../dataflow/include
   ../../callgraph/include
+  ../../scheduler/include
   ../include 
   ./ 
   )
