--- a/src/loop_invariant_code_motion/src/CMakeLists.txt
+++ b/src/loop_invariant_code_motion/src/CMakeLists.txt
@@ -38,6 +38,7 @@ include_directories(${LLVM_INCLUDE_DIRS}
   ../../dataflow/include
   ../../noelle/include
   ../../callgraph/include
+  ../../scheduler/include
   ../include/ 
   ./ 
   )
