--- a/src/doall/src/CMakeLists.txt
+++ b/src/doall/src/CMakeLists.txt
@@ -40,6 +40,7 @@ include_directories(${LLVM_INCLUDE_DIRS}
   ../../noelle/include
   ../../dataflow/include
   ../../callgraph/include
+  ../../scheduler/include
   ../include 
   ./ 
   )
