--- a/src/enablers/src/CMakeLists.txt
+++ b/src/enablers/src/CMakeLists.txt
@@ -47,6 +47,7 @@ include_directories(${LLVM_INCLUDE_DIRS}
   ../../noelle/include
   ../../dataflow/include
   ../../callgraph/include
+  ../../scheduler/include
   ./
   )
 
