--- a/src/noelle/src/CMakeLists.txt
+++ b/src/noelle/src/CMakeLists.txt
@@ -40,6 +40,7 @@ include_directories(${LLVM_INCLUDE_DIRS}
   ../../loops/include
   ../../dataflow/include
   ../../callgraph/include
+  ../../scheduler/include
   ../include 
   )
 
