--- a/src/parallelizer/src/CMakeLists.txt
+++ b/src/parallelizer/src/CMakeLists.txt
@@ -45,6 +45,7 @@ include_directories(${LLVM_INCLUDE_DIRS}
   ../../noelle/include
   ../../dataflow/include
   ../../callgraph/include
+  ../../scheduler/include
   ./
   )
 
