--- a/src/scev_simplification/src/CMakeLists.txt
+++ b/src/scev_simplification/src/CMakeLists.txt
@@ -34,6 +34,7 @@ include_directories(${LLVM_INCLUDE_DIRS}
   ../../dataflow/include
   ../../noelle/include
   ../../callgraph/include
+  ../../scheduler/include
   ../include/ 
   ./ 
   )
