--- a/tests/scripts/Makefile_nautilus
+++ b/tests/scripts/Makefile_nautilus
@@ -16,7 +16,7 @@ RUNTIME_CFLAGS="-DDEBUG"
 
 # Parallelization options
 # 	- To dump the PDG: -noelle-pdg-dump
-PARALLELIZATION_OPTIONS=-alloc-aa-verbose=1 -dswp-force 
+PARALLELIZATION_OPTIONS=-alloc-aa-verbose=1 -noelle-parallelizer-force
 NOELLE_OPTIONS=-noelle-pdg-verbose=1 -noelle-verbose=2 -noelle-min-hot=0
 OPT_LEVEL=-O0 -g
 
